# gtirb-rewriting

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.txt  Dockerfile.ci  README.md  delete_remote_packages.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-tests.txt  setup.py  tox.ini
doc/: Deletion.md  Drivers.md  Getting-Started.md
gtirb_rewriting/: __init__.py  __main__.py  _auxdata.py  _auxdata_offsetmap.py  abi.py  assembler.py  assembly.py  driver.py  intervalutils.py  isa.py  modify.py  passes.py  patch.py  prepare.py  rewriting.py  scopes.py  utils.py  version.py
gtirb_rewriting/_adt/: __init__.py  block_ordering.py  identity_set.py  linked_list.py  offset_mapping.py
gtirb_rewriting/_modify/: __init__.py  cache.py  delete_symbols.py  edges.py  edit.py  functions.py  join.py  remove.py  retarget.py  split.py
gtirb_rewriting/assembler/: __init__.py  __main__.py  _create_gtirb.py  _mc_utils.py  assembler.py
gtirb_rewriting/dwarf/: _encodable.py  _encoders.py  cfi.py  cfi_eval.py  dwarf2.py  expr.py
gtirb_rewriting/gtirb_protobuf_compat/: __init__.py  proto_3.py  proto_4.py
gtirb_rewriting/patches/: __init__.py  calls.py
src/gtirb_rewriting/: __init__.py  _auxdata.py  _auxdata_offsetmap.py  abi.py  driver.py  intervalutils.py  passes.py  patch.py  prepare.py  rewriting.py  scopes.py  utils.py
src/gtirb_rewriting/_adt/: block_ordering.py  offset_mapping.py
src/gtirb_rewriting/_modify/: __init__.py  cache.py  edges.py  edit.py  functions.py  remove.py  retarget.py  split.py
src/gtirb_rewriting/assembler/: __init__.py  __main__.py  _create_gtirb.py  assembler.py
src/gtirb_rewriting/dwarf/: __init__.py  _encodable.py  cfi_eval.py  expr.py
src/gtirb_rewriting/gtirb_protobuf_compat/: proto_4.py
src/gtirb_rewriting/patches/: calls.py
tests/: Makefile  constraints.c  constraints.gtirb  constraints.s  e2e  e2e.3.gtirb  e2e.c  e2e.gtirb  helpers.py  mock_entrypoints.py  test_abi.py  test_assembler.py  test_assembly.py  test_auxdata.py  test_calls.py  test_cfg.py  test_constraints.py  test_delete_symbols.py  test_deletions.py  test_driver.py  test_dwarf.py  test_dwarf_cfi.py  test_dwarf_cfi_eval.py  test_dwarf_encoders.py  test_dwarf_expr.py  test_e2e.py  test_insert_function.py  test_intervalutils.py  test_modify.py  test_passes.py  test_retarget.py  test_rewriting.py  test_scopes.py  test_utils.py  unwind  unwind.cpp
tests/adt/: test_block_ordering.py  test_identity_set.py  test_linked_list.py  test_offset_mapping.py
